adicionado rota de criação de nova chave pix na aplicação com testes e atualização de documentação swagger
